--- a/app/views/poker_session/index.html.erb
+++ b/app/views/poker_session/index.html.erb
@@ -2,14 +2,4 @@
 
 <%= link_to 'New Session', new_user_poker_session_path(current_user.id) %>
 
-<table>
-  <th>ID</th>
-  <th>Date Played</th>
-  <% current_user.poker_sessions.each do |poker_session| %>
-    <tr>
-      <td> <%= poker_session.id %></td>
-      <td><%= poker_session.date_played %></td>
-    </tr>
-  <% end %>
-</table>
-
+<%= render 'poker_session_table', poker_sessions: current_user.poker_sessions %>
