--- a/app/views/poker_session/_poker_session_table.html.erb
+++ b/app/views/poker_session/_poker_session_table.html.erb
@@ -4,8 +4,9 @@
   <th>Date Played</th>
   <% poker_sessions.each do |poker_session| %>
     <tr>
-      <td> <%= poker_session.id %></td>
+      <td><%= poker_session.id %></td>
       <td><%= poker_session.date_played %></td>
+      <td><%= link_to "Edit", edit_user_poker_session_path(current_user.id, poker_session.id)  %></td>
     </tr>
   <% end %>
 </table>
