--- a/app/views/poker_session/_form.html.erb
+++ b/app/views/poker_session/_form.html.erb
@@ -1,25 +1,23 @@
 
-<%= form_for :poker_session, url: user_poker_session_index_path do |f| %>
-  <% if @poker_session.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(poker_session.errors.count, "error") %> prohibited
-        this poker_session from being saved:
-      </h2>
-      <ul>
-        <% poker_session.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <p>
-    <%= f.label :date_played %>
-    <%= f.date_field :date_played %>
-  </p>
-
-  <p>
-    <%= f.submit "Submit" %>
-  </p>
+<% if poker_session.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(poker_session.errors.count, "error") %> prohibited
+      this poker_session from being saved:
+    </h2>
+    <ul>
+      <% poker_session.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
+
+<p>
+  <%= f.label :date_played %>
+  <%= f.date_field :date_played %>
+</p>
+
+<p>
+  <%= f.submit "Submit" %>
+</p>
