--- a/app/views/poker_session/_poker_session_table.html.erb
+++ b/app/views/poker_session/_poker_session_table.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <td><%= poker_session.id %></td>
       <td><%= poker_session.date_played %></td>
-      <td><%= link_to "Edit", edit_user_poker_session_path(current_user.id, poker_session.id)  %></td>
+      <td><%= link_to "Edit", edit_poker_session_path(current_user.id, poker_session.id)  %></td>
     </tr>
   <% end %>
 </table>
