--- a/app/views/poker_session/edit.html.erb
+++ b/app/views/poker_session/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Edit Poker Session</h1>
 
-<%= render 'form' %>
+<%= form_for @poker_session, url: poker_session_url(@poker_session) do |f| %>
+  <%= render 'form', poker_session: @poker_session, f: f %>
+<% end %>
