--- a/app/views/layouts/navigation/_navigation.html.erb
+++ b/app/views/layouts/navigation/_navigation.html.erb
@@ -1,13 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/">Our Logo</a>
   <form class="form-inline">
-    <a class="btn btn-outline-primary" href="/login" role="button">
-    Login
-    </a>
-    <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="/signup" role="button">
-      Sign Up
-      </a>
-    </div>
+    <%= render 'layouts/navigation/user_login_status_links' %>
   </form>
 </nav>
