--- a/app/views/layouts/navigation/_authenticated_links.html.erb
+++ b/app/views/layouts/navigation/_authenticated_links.html.erb
@@ -1,14 +1,6 @@
+<strong><%= current_user.email %></strong>
+<div style="padding-left: 10px;" id="Sessions" class="navbar-left">
+  <%= link_to "Sessions", user_poker_sessions_path(current_user.id), class: "btn btn-outline-success", role: "button" %> 
+</div>
 
-<a class="btn btn-outline-primary" href="<%= edit_user_password_path %>" role="button">
- Edit Account
-</a>
-<div style="padding-left: 10px;">
-  <a class="btn btn-outline-success" href="<%= destroy_user_session_path %>" role="button" >
-    Log Out
-  </a>
-</div>
-<div style="padding-left: 10px;">
-  <a class"btn btn-outline-success" href="<%= user_poker_sessions_path(current_user.id) %>" role="button">
-    Sessions
-  </a>
-</div>
+<%= render 'layouts/navigation/account_drop_down' %>
