Refactor table and add clickable rows

--- a/app/views/layouts/navigation/_navigation.html.erb
+++ b/app/views/layouts/navigation/_navigation.html.erb
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">Our Logo</a>
+<nav class="navbar navbar-light bg-light navbar-fixed-top">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="/">Our Logo</a>
+  </div>
   <form class="form-inline">
     <%= render 'layouts/navigation/user_login_status_links' %>
   </form>
