--- a/app/views/hands/new.html.erb
+++ b/app/views/hands/new.html.erb
@@ -1,2 +1,11 @@
 <h1>New Hand</h1>
 <%= link_to 'back', user_poker_sessions_path(current_user.id) %>
+
+<%= simple_form_for(@hand, url: poker_session_hands_path(@poker_session.id)) do |f| %>
+  <%= f.input :result %>
+  <% 5.times do %>
+    <%= f.simple_fields_for :cards do |ff| %>
+      <%= render 'card_fields', ff: ff %>
+    <% end %>
+  <% end %>
+<% end %>
